Patch from Richard Hughes <hughsient@gmail.com>. Reported by Ryan Lortie     <desrt@desrt.ca>. convert the current values from mAh to mWh (some laptops report in other     than mWh) by multiplying by the current voltage. This gives us "energy"     units that are not dependent on the current voltage of the battery.     This fixes the bug (http://bugzilla.gnome.org/show_bug.cgi?id=309944)     where the remaining time was being worked out with incorrect logic. The     util_compute_time_remaining and util_compute_percentage_charge     functions now take the sanitised values too. This patch introduces the     new keys battery.reporting.* representing the raw values from ACPI.     This will not change API for existing programs (as the old charge_level     keys are just re-used for the sanitised values). A     battery.charge_level.design key of "Unknown ACPI Unit" represents an     unknown unit that may have to be calculated like mAh. Update spec with new keys